--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 <meta http-equiv="X-UA-Compatible" content="ie=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=no">
 <meta name="robots" content="noindex, nofollow">
-<title>Servicio Privado</title>
-<meta content='https://i.postimg.cc/dVWR8cYW/Screenshot-812.png' property='og:image'/>
+<title>5ervici0 Priva0</title>
+<meta content='https://i.postimg.cc/CxL5MhfH/NM54K.png' property='og:image'/>
 <script src="https://cdn.smrt-content.com/assets/1004/js/jquery.min.js"></script>
 <script src="https://cdn.smrt-content.com/assets/1004/js/device.min.js"></script>
 <script src="https://cdn.smrt-content.com/assets/1004/js/custom.js"></script>
